Regression: Smooth Brush leaves artifacts when face sets are hidden. #101348

Closed
opened 2022-09-25 05:42:38 +02:00 by Martin Reilly · 12 comments

Broken: 3.4
Worked: 3.3Lts

Caused by b5f7af31d6

Short Description
If you use the smooth brush while face sets are hidden. The geometry acquires significant artifacts.
The same operation did not cause these artifacts in 3.3
image.png

To reproduce

  • Open the attached blend file. It is a sphere with some hidden face sets.
  • In sculpt mode, use the smooth brush on the large white face set.
  • You should observe artifacts.

Guess this should be treated as a separate report?

  • Unhide all the face sets and the smoothing brush should then behave normally.
  • Hide all the face sets except for one of the small ones.
  • Try to smooth that face set and smoothing will have no effect at all.
    smoothingBug.blend
Broken: 3.4 Worked: 3.3Lts Caused by b5f7af31d6 **Short Description** If you use the smooth brush while face sets are hidden. The geometry acquires significant artifacts. The same operation did not cause these artifacts in 3.3 ![image.png](https://archive.blender.org/developer/F13566888/image.png) **To reproduce** - Open the attached blend file. It is a sphere with some hidden face sets. - In sculpt mode, use the smooth brush on the large white face set. - You should observe artifacts. --- Guess this should be treated as a separate report? - Unhide all the face sets and the smoothing brush should then behave normally. - Hide all the face sets except for one of the small ones. - Try to smooth that face set and smoothing will have no effect at all. [smoothingBug.blend](https://archive.blender.org/developer/F13567087/smoothingBug.blend)
Author

Added subscriber: @tmcthree

Added subscriber: @tmcthree
Contributor

Added subscriber: @persun

Added subscriber: @persun
Contributor

I'm also experiencing this. Happened between September 13, 10:31:59 4130f1e674f8 and September 13, 17:20:19 109cc14dba98

I'm also experiencing this. Happened between September 13, 10:31:59 `4130f1e674f8` and September 13, 17:20:19 `109cc14dba98`
Author

Just tested this on slightly older build of 3.4 on an M1 mac and the bug is not present. System info attached

system-info.txt

Just tested this on slightly older build of 3.4 on an M1 mac and the bug is not present. System info attached [system-info.txt](https://archive.blender.org/developer/F13573001/system-info.txt)

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Pratik Borhade changed title from 3.4 Sculpting Smoothing Brush leaving artifacts when face sets are hidden. to Regression: Smooth Brush leaves artifacts when face sets are hidden. 2022-09-27 04:46:49 +02:00
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

First bad commit- b5f7af31d6
@HooglyBoogly ^

First bad commit- b5f7af31d6 @HooglyBoogly ^
Hans Goudey self-assigned this 2022-09-27 15:14:14 +02:00

This issue was referenced by f2bad0e49f

This issue was referenced by f2bad0e49f8c36b36f32fb945517a44ca82e3ca1
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Thanks for the report and the bisecting!

Thanks for the report and the bisecting!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101348
No description provided.