Fix T101348: Sculpt smooth brush artifacts with hidden faces

The brush mixed up the vert and poly hide layers.